...
                                    flexDirection: 'row',
                                    gap: 8,
                                }}
                                onPress={startGame}
                            >
                                <Feather name="play" size={18} color="white" />
                                <Text style={{ fontSize: 16, fontWeight: '700', color: 'white' }}>Start Game</Text>
                            </TouchableOpacity>
                        </View>
                    </View>
                </Modal>
            </View>
        );
...
